--- a/ad-l4-1.0/index3.html
+++ b/ad-l4-1.0/index3.html
@@ -17,6 +17,26 @@
         <li><a href="index3.html">Contacto</a></li>
       </ul>
      </nav>
+     <footer>
+      <div class="left">
+          <h3>Autores</h3>
+          <ul>
+              <li>Tatiana Campos</li>
+              <li>Nicole Gicel</li>
+              <li>Leydy Tarazona</li>
+              <li>Jelis Antolinez</li>
+              <li>Xiomara Sanchez</li>
+          </ul>
+      </div>
+    
+      <div class="center">
+          <h3>Pet Lovers</h3>
+      </div>
+    
+      <div class="right">
+          <p>Contacto: <a href="mailto:petlovers@gmail.com">petlovers@gmail.com</a></p>
+      </div>
+    </footer>
   <!--
   This script places a badge on your repl's full-browser view back to your repl's cover
   page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
