--- a/ad-l4-1.0/index3.html
+++ b/ad-l4-1.0/index3.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <title>The Blog Site Team 5</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
-
   <body>
-    <nav></nav>
+    <nav>
       <ul class="menu">
         <li><a href="index.html">Inicio</a></li>
         <li><a href="index2.html">Quiénes Somos</a></li>
@@ -37,12 +39,6 @@
           <p>Contacto: <a href="mailto:petlovers@gmail.com">petlovers@gmail.com</a></p>
       </div>
     </footer>
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
   <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
 </body>
-
 </html>
