--- a/ad-l4-1.0/index2.html
+++ b/ad-l4-1.0/index2.html
@@ -1,52 +1,126 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="es">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Blog Site - Pet Lovers</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <title>The Blog Site Team 5</title>
-  <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
-
 <body>
-  <nav></nav>
-  <ul class="menu">
-    <li><a href="index.html">Inicio</a></li>
-    <li><a href="index2.html">Quiénes Somos</a></li>
-    <li><a href="index3.html">Contacto</a></li>
-  </ul>
- </nav>
- <footer>
-  <div class="left">
-      <h3>Autores</h3>
-      <ul>
-          <li>Tatiana Campos</li>
-          <li>Nicole Gicel</li>
-          <li>Leydy Tarazona</li>
-          <li>Jelis Antolinez</li>
-          <li>Xiomara Sanchez</li>
-      </ul>
-  </div>
+    <nav>
+        <ul class="menu">
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="index2.html">Quiénes Somos</a></li>
+            <li><a href="index3.html">Contacto</a></li>
+        </ul>
+    </nav>
 
-  <div class="center">
-      <h3>Pet Lovers</h3>
-  </div>
+    <main>
+        <section id="about-us">
+            <h1>¿Quiénes somos?</h1>
+            <p>Pet Lovers, un grupo de amantes de los animales decididos a crear un blog y dedicarnos a 
+                compartir nuestras experiencias y conocimientos del cuidado y bienestar de nuestras mascotas.
+                Brindamos consejos prácticos y entretenimiento para todos.</p>
+            
+            <h2>Nosotr@s</h2>
+            <p>Cada un@ de nuestr@s peludos aporta una experiencia única al blog:</p>
+            <div class="pet-list">
+                <div class="pet-box">
+                    <div class="image-border">
+                        <img src="./Pic/Morita.jpg" alt="Morita" class="pet-image">
+                    </div>
+                    <strong>Morita</strong>
+                    <h4 id="textoMorita">Es una perrita Shih tzu, tiene dos años, le gusta jugar, caminar y comer. 
+                        Es muy consentida y la consienten mucho, es tranquila y aveces es juiciosa.</h4>
+                </div>
+                <div class="pet-box">
+                    <div class="image-border">
+                        <img src="./Pic/Lulú.jpg" alt="Lulú" class="pet-image">
+                    </div>
+                    <strong>Lulú</strong>
+                    <h4 id="textoLulú">Tiene 3 años, adoptada a los dos meses. Le gusta dormir encima de las piernas 
+                        de la familia. Su hobbie es mirar por la ventana y, aunque es muy cariñosa y juguetona, 
+                        también es muy territorial y no le gustan otros animalitos. Le tiene miedo a los desconocidos.
+                        Siempre que suena el timbre, corre a esconderse.</h4>
+                </div>
+                <div class="pet-box">
+                    <div class="image-border">
+                        <img src="./Pic/Rocco.jpeg" alt="Rocco" class="pet-image">
+                    </div>
+                    <strong>Rocco</strong>
+                    <h4 id="textoRocco">Pointer inglés blanco y negro de 9 años, de nobleza y dulzura 
+                        incomparables. Su pelaje elegante y su mirada tierna siempre transmiten amor. 
+                        Aunque su apariencia es suave, es valiente y siempre está alerta para proteger 
+                        a su familia.</h4>
+                </div>
+                <div class="pet-box">
+                    <div class="image-border">
+                        <img src="./Pic/Winy.jpeg" alt="Winy" class="pet-image">
+                    </div>
+                    <strong>Winy</strong>
+                    <h4 id="textoWiny">es una perrita pequeña de 5 años, llena de energía y siempre dispuesta a jugar. 
+                        Es hiperactiva, cariñosa, y necesita compañía constante, pues no le gusta estar sola y tiende 
+                        a llorar cuando lo está. Sus actividades favoritas incluyen jugar con pelotas y correr sin 
+                        parar. Winy es un cruce entre un Pug y un Fresh Pooder.</h4>
+                </div>
+                <div class="pet-box">
+                    <div class="image-border">
+                        <img src="./Pic/Manolo.jpeg" alt="Manolo" class="pet-image">
+                    </div>
+                    <strong>Manolo</strong>
+                    <h4 id="textoManolo">Fresh Pooder de 6 años, muy tranquilo y perezoso. Adora dormir y le encanta 
+                        despertarse tarde. Disfruta jugar y su energía se agota rápido, así que prefiere pasar el tiempo 
+                        siendo consentido o durmiendo cerca de alguien. Le fascina la pizza y es muy juicioso, siempre 
+                        buscando un poco de cariño y compañía en sus momentos de descanso.</h4>
+                </div>
+                <div class="pet-box">
+                    <div class="image-border">
+                        <img src="./Pic/Oreon.png" alt="Oreon" class="pet-image">
+                    </div>
+                    <strong>Oreon</strong>
+                    <h4 id="textoOreon">Es un gato  de 1 año, creció sin acompañantes gatunos por eso se le olvidó ser 
+                        gato a excepción de su instinto felino salvaje. No se baña como los gatos, no maúlla normal, 
+                        no salta altas superficies, le gusta salir a la calle, se hace el muerto, se sienta y da la 
+                        pata con tal que le den su yogurt griego. Vino a cambiar mi mundo y mi percepción de los gatos.</h4>
+                </div>
+            </div>
 
-  <div class="right">
-      <p>Contacto: <a href="mailto:petlovers@gmail.com">petlovers@gmail.com</a></p>
-  </div>
-</footer>
+            <h2>Nuestra misión</h2>
+            <p>Ayudamos a dueños de mascotas a ofrecer el mejor cuidado a sus animales, compartiendo conocimientos y 
+                experiencias que hemos adquirido a lo largo de los años. Apoyar a refugios y organizaciones de 
+                rescate como hogares de paso y promovemos la adopción responsable.</p>
+        </section>
+    </main>
 
+    <footer>
+        <div class="left">
+            <h3>Autores</h3>
+            <ul>
+                <li>Tatiana Campos</li>
+                <li>Nicole Gicel</li>
+                <li>Leydy Tarazona</li>
+                <li>Jelis Antolinez</li>
+                <li>Xiomara Sanchez</li>
+            </ul>
+        </div>
 
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+        <div class="center">
+            <h3>Pet Lovers</h3>
+        </div>
+
+        <div class="right">
+            <p>Contacto: <a href="mailto:petlovers@gmail.com">petlovers@gmail.com</a></p>
+        </div>
+    </footer>
+
+    <!--
+    This script places a badge on your repl's full-browser view back to your repl's cover
+    page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
+    teal, blue, blurple, magenta, pink!
+    -->
+    <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
 </body>
-
 </html>
