--- a/ad-l4-1.0/index3.html
+++ b/ad-l4-1.0/index3.html
@@ -12,6 +12,8 @@
 </head>
 
   <body>
+    <header>
+      <img class="logo-contacto" src="https://img.freepik.com/vector-premium/logotipo-letras-amantes-mascotas_31492-63.jpg" alt="LOGO DE CONTACTO">
     <nav>
       <ul class="menu">
         <li><a href="index.html">Inicio</a></li>
@@ -19,8 +21,45 @@
         <li><a href="index3.html">Contacto</a></li>
       </ul>
      </nav>
+    </header>
+
+    <main>
+      <section>
+        <div class="login-container">
+          <h2>Contacto</h2>
+            <p>Si deseas contactarnos, aquí tienes la información de algunos miembros del equipo:</p>
+            <ul>
+                <li>Tatiana Campos: TatianaCa@proyecto.com | +123 456 789</li>
+                <li>Nicole Gicel: NicoleCorte@proyecto.com | +123 456 789</li>
+                <li>Leydy Tarazona: @LeydyTaraproyecto.com | +123 456 789</li>
+                <li>Jelis Antolinez: JelisAnto@proyecto.com | +123 456 789</li>
+                <li>Xiomara Sanchez: Xiomara_sa@proyecto.com | +123 456 789</li>
+            </ul>
+        </div>        
+        <div class="login-container">
+          <form class="login-form" action="/enviar-mensaje" method="POST"><!--Inicia un formulario-->
+              <!-- Los atributos action y method definen a dónde y cómo se enviará el formulario.-->          
+              <div class="icon-container">
+                <img src="https://cdn-icons-png.flaticon.com/512/3064/3064197.png" alt="Lock icon" class="lock-icon">
+              </div>
+            <label for="nombre">Nombre:</label><!--Un texto descripctivo-->
+            <input type="text" id="nombre" name="nombre" placeholder="Your name" required><!--Entrada de datos-->
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="example@petlovers.com">
+
+            <label for="mensaje">Mensaje:</label>
+            <textarea id="mensaje" name="mensaje" placeholder="Coloca tu mensaje, entre más chingon más rapido te respondemos ;)" rows="4"></textarea><!--Un campo para un mensaje más largo-->
+
+            <button type="submit">Enviar</button>
+          </form>
+        </div> 
+      </section>
+    </main>
+        
      <footer>
       <div class="left">
+        <p>&copy; 2024 Mi Sitio Web</p>
           <h3>Autores</h3>
           <ul>
               <li>Tatiana Campos</li>
