Subida de la tarea6

--- a/ad-l4-1.0/index.html
+++ b/ad-l4-1.0/index.html
@@ -27,11 +27,13 @@
    </nav>
 
   <main>
-    <h3>¡Bienvenido a Pet Lovers! 🐾💖</h3>
-    <p>En este blog, compartimos todo lo que necesitas saber para cuidar, entender y disfrutar al máximo de tus queridas mascotas. Ya sea que tengas un perro, un gato, un conejo o cualquier otro compañero animal, aquí encontrarás consejos útiles, historias conmovedoras y recomendaciones para que tu vida con ellos sea lo más feliz y saludable posible.</p>
-    <p>Este un espacio dedicado a todas las personas que comparten su vida con una mascota o están pensando en adoptar una. En este blog, encontrarás información útil y entretenida sobre todo lo que necesitas saber para cuidar a tus amigos peludos, emplumados o escamosos. Nuestro objetivo es ayudarte a mejorar la calidad de vida de tus mascotas, ofreciéndote consejos prácticos, historias inspiradoras y las últimas novedades sobre el mundo animal.</p>
-    <img class="img" src="Pic/domesticos.jpg" alt="Animales">
-    <div>
+    <div class="login-container">
+      <h3>¡Bienvenido a Pet Lovers! 🐾💖</h3>
+      <p>En este blog, compartimos todo lo que necesitas saber para cuidar, entender y disfrutar al máximo de tus queridas mascotas. Ya sea que tengas un perro, un gato, un conejo o cualquier otro compañero animal, aquí encontrarás consejos útiles, historias conmovedoras y recomendaciones para que tu vida con ellos sea lo más feliz y saludable posible.</p>
+      <p>Este un espacio dedicado a todas las personas que comparten su vida con una mascota o están pensando en adoptar una. En este blog, encontrarás información útil y entretenida sobre todo lo que necesitas saber para cuidar a tus amigos peludos, emplumados o escamosos. Nuestro objetivo es ayudarte a mejorar la calidad de vida de tus mascotas, ofreciéndote consejos prácticos, historias inspiradoras y las últimas novedades sobre el mundo animal.</p>
+      <img class="img" src="Pic/domesticos.jpg" alt="Animales">
+    </div>
+    <div class="login-container">
         <h4>¿Qué encontrarás en Pet Lovers?</h4>
         <p>
             Consejos de cuidado y bienestar: Desde cómo elegir la mejor comida para tu perro o gato, hasta recomendaciones sobre higiene, ejercicio y bienestar emocional. Cada animal es único, y en Pet Lovers ofrecemos guías especializadas que abarcan desde cachorros inquietos hasta gatos senior que requieren cuidados más específicos. También cubrimos temas como el cuidado de otras mascotas, como conejos, aves, peces e incluso reptiles.
@@ -46,21 +48,25 @@
             
             Historias de la comunidad Pet Lovers: Nuestro blog no sería lo mismo sin ti. En esta sección, compartimos relatos reales de dueños de mascotas que han experimentado momentos únicos con sus animales. Desde la superación de problemas de comportamiento hasta rescates emocionantes, estas historias demuestran el profundo impacto que las mascotas tienen en nuestras vidas.</p>
     </div>
+
+    <div class="login-container">
     <h3>¡Únete a la comunidad de Pet Lovers!</h3>
         <p>¿Tienes alguna pregunta o historia para compartir? No dudes en escribirnos en los comentarios o seguirnos en nuestras redes sociales para estar al tanto de las últimas novedades.
         <br>            
         Tu amor por los animales hace del mundo un lugar mejor, ¡y aquí estamos para ayudarte a cuidar de ellos!</p>
+    </div>
 
+    <div class="login-container"> 
     <h3>Actividades al aire libre con tu mascota: Diversión asegurada 🏞️🐾</h3>
     <p>Salir con tu mascota al aire libre no solo mejora su salud física, sino también su bienestar mental. Descubre algunas actividades que puedes hacer con tu perro o gato para disfrutar del aire libre y mantenerlos activos.</p>
     <ul>
         <li>Excursiones por la montaña</li>
         <li>Picnics en el parque</li>
         <li>Entrenamiento de agilidad</li>
+
     </ul>
     <img class="img" src="Pic/article.jpeg" alt="Animales">
     <br>
-    <div>
       <label for="nombre">Nombre:</label>
       <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required><br><br>
     
