--- a/ad-l4-1.0/index2.html
+++ b/ad-l4-1.0/index2.html
@@ -64,7 +64,7 @@
                   <img src="./Pic/Winy.png" alt="Winy" class="pet-image">
               </div>
               <strong>Winy</strong>
-              <h4 id="textoWiny">es una perrita pequeña de 5 años, llena de energía y siempre dispuesta a jugar. 
+              <h4 id="textoWiny">Es una perrita pequeña de 5 años, llena de energía y siempre dispuesta a jugar. 
                   Es hiperactiva, cariñosa, y necesita compañía constante, pues no le gusta estar sola y tiende 
                   a llorar cuando lo está. Sus actividades favoritas incluyen jugar con pelotas y correr sin 
                   parar. Winy es un cruce entre un Pug y un Fresh Pooder.</h4>
